--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.4.1"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "private": true
 }
