feat(config): add local config support and deep merge

--- a/currency-tracker-diff/config/config.json
+++ b/currency-tracker-diff/config/config.json
@@ -26,6 +26,15 @@
       "multiplier": 1000
     }
   },
+  "positions": {
+    "USDJPY": {
+      "hold": 147.779,
+      "lot": 1000,
+      "slip": 0,
+      "monitoring": true,
+      "priority": 1
+    }
+  },
   "defaults": {
     "multiplier": 1000,
     "pair": "USDJPY"
